--- a/back-end/package.json
+++ b/back-end/package.json
@@ -25,6 +25,7 @@
     "migration:show": "npm run typeorm -- migration:show"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.73.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.1",
